--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,6 +10,10 @@
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
  *
- *= require_tree .
- *= require_self
+ *= require "style"
+ *= require "top"
+ *= require "bulma_custom"
+ *= require "vue-magick-pen/dist/vue-magick-pen"
+ *= require "prismjs/themes/prism-okaidia"
+ *= require "vue-code-highlight/themes/window"
  */
