--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -1,3 +1,14 @@
 // Place all the styles related to the top controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+div {
+  pre[class*="language-"] {
+    width: 100%;
+    font-size: 1rem;
+  }
+}
+.tag:not(body) {
+  background-color: transparent !important;
+  font-size: 1rem !important;
+}
+
