--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -1,4 +1,229 @@
+<div id="page-content">
 
-<div id="app"></div>
-<%= render partial: 'magick_pen/config', locals: { editable: true } %>
+  <div class="main-content">
+    <!-- Begin About Me Section -->
+    <div class="section-light about-me" id="about-me">
+      <div class="container">
+        <div class="column is-12 about-me">
+          <h1 class="title has-text-centered section-title">About Magick Pen</h1>
+        </div>
+        <div class="columns is-multiline">
+          <div
+            class="column is-6 has-vertically-aligned-content"
+            data-aos="fade-right">
+            <p class="is-larger">
+              <strong>
+                <vue-magick-pen pen-key="about">
+                Magick Penは、Ruby on Railsで制作されたWebサイト内のページの任意の箇所をダイレクトに編集して更新することを可能にするコンポーネントフレームワークです。
+                </vue-magick-pen>
+              </strong>
+            </p>
+            <br />
+            <p>
+              編集権限を持ったユーザーがサイトにアクセスした場合のみ編集を可能にすることができます。
+            </p>
+            <%- if ! @editable %>
+              <div class="mt-4"><a class="button is-primary" href="?editable=true"><i class="fa fa-edit"></i>&nbsp;編集する</a></div>
+            <% else %>
+              <div class="mt-4">
+                <i class="fa fa-edit fa-2x" style="color: orangered"></i> の部分にマウスオーバーすると編集ができます。
+              </div>
+            <%- end %>
+          </div>
+          <div class="column is-6 right-image " data-aos="fade-left">
+            <img
+              class="is-rounded"
+              src="https://picsum.photos/id/7/600/375"
+              alt=""
+              />
+          </div>
+        </div>
+      </div>
+    </div>
 
+    <div class="section-dark">
+      <div class="container">
+        <div
+          class="columns is-multiline"
+          data-aos="fade-in"
+          data-aos-easing="linear"
+        >
+          <div class="column is-12 about-me">
+            <h1 class="title has-text-centered section-title">
+              編集可能にしたい箇所をタグで囲むだけ
+            </h1>
+          </div>
+        </div>
+      </div>
+      <div class="container">
+        <div class="column is-12">
+          <vue-code-highlight language="markup">
+              <code>
+<%- code = <<'EOS'
+
+<p class="is-larger">
+  <strong>
+    <vue-magick-pen pen-key="about">
+      Magick Penは、Ruby on Railsで制作されたWebサイト内のページの任意の箇所をダイレクトに編集して
+      更新することを可能にするコンポーネントフレームワークです。
+    </vue-magick-pen>
+  <strong>
+</p>
+EOS
+%>
+                <%= code %>
+              </code>
+          </vue-code-highlight>
+          <p class="mt-3"> Railsのerbファイルの編集可能にしたい箇所を pen-key属性（ページ内のユニークなキー）をつけて、vue-magick-pen タグで囲むだけで編集可能になります。
+          pen-key は、controller / action 内でユニークなものととして扱われます。<br/>
+            ヘッダー、フッター、サイドバーなど サイトで共通な箇所、controller / action をまたぐ場合は、プレフィックス"g-" をpen-keyに付与すると(例：g-hoge)、サイト内でユニークなものとして扱われます。
+          </p>
+
+          <p class="mt-3">
+            vue-magick-pen のタグで囲む部分は、プレインテキストでもHTMLでもOKです。HTMLの場合は、HTMLを編集することで更新ができます。
+          </p>
+
+        </div>
+      </div>
+    </div>
+
+    <div class="section-light about-me" id="about-me">
+      <div class="container">
+        <div class="column is-12 about-me">
+          <h1 class="title has-text-centered section-title">変更履歴を管理</h1>
+        </div>
+        <div class="columns is-multiline">
+          <%= image_tag "history.jpg" %>
+        </div>
+        <p class="mt-3">変更された内容をヒストリーとして保存します。修正を元に戻したい場合にも安心です。</p>
+      </div>
+    </div>
+
+    <!-- Begin Services Content -->
+
+    <div class="section-color services" id="services">
+      <div class="container">
+        <div class="columns is-multiline">
+          <div
+            class="column is-12 about-me"
+            data-aos="fade-in"
+            data-aos-easing="linear"
+          >
+            <h1 class="title has-text-centered section-title">Services</h1>
+
+            <h2 class="subtitle">
+              <vue-magick-pen pen-key="service-title">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua
+              </vue-magick-pen>
+
+            </h2>
+            <br />
+          </div>
+          <div class="columns is-12">
+            <div
+              class="column is-4 has-text-centered"
+              data-aos="fade-in"
+              data-aos-easing="linear"
+            >
+              <i class="fas fa-meteor fa-3x"></i>
+              <hr />
+              <h2>
+                <vue-magick-pen pen-key="service-1">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                do eiusmod tempor incididunt ut labore et dolore magna aliqua
+                </vue-magick-pen>
+              </h2>
+            </div>
+            <div
+              class="column is-4 has-text-centered"
+              data-aos="fade-in"
+              data-aos-easing="linear"
+            >
+              <i class="fas fa-paint-brush fa-3x"></i>
+              <hr />
+              <h2>
+                <vue-magick-pen pen-key="service-2">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                  do eiusmod tempor incididunt ut labore et dolore magna aliqua
+                </vue-magick-pen>
+              </h2>
+            </div>
+            <div
+              class="column is-4 has-text-centered"
+              data-aos="fade-in"
+              data-aos-easing="linear"
+            >
+              <i class="fas fa-rocket fa-3x"></i>
+              <hr />
+              <h2>
+                <vue-magick-pen pen-key="service-3">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                  do eiusmod tempor incididunt ut labore et dolore magna aliqua
+                </vue-magick-pen>
+              </h2>
+            </div>
+          </div>
+          <hr />
+          <div class="columns is-12">
+            <div
+              class="column is-4 has-text-centered"
+              data-aos="fade-in"
+              data-aos-easing="linear"
+            >
+              <i class="fas fa-upload fa-3x"></i>
+              <hr />
+              <vue-magick-pen pen-key="service-4">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                do eiusmod tempor incididunt ut labore et dolore magna aliqua
+              </vue-magick-pen>
+            </div>
+            <div
+              class="column is-4 has-text-centered"
+              data-aos="fade-in"
+              data-aos-easing="linear"
+            >
+              <vue-magick-pen pen-key="icon-5">
+                <i class="fas fa-bus fa-3x"></i>
+              </vue-magick-pen>
+              <hr />
+              <h2>
+                <vue-magick-pen pen-key="service-5">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                  do eiusmod tempor incididunt ut labore et dolore magna aliqua
+                </vue-magick-pen>
+              </h2>
+            </div>
+            <div
+              class="column is-4 has-text-centered"
+              data-aos="fade-in"
+              data-aos-easing="linear"
+            >
+              <vue-magick-pen pen-key="icon-6">
+              <i class="fas fa-code fa-3x"></i>
+              </vue-magick-pen>
+              <hr />
+              <vue-magick-pen pen-key="service-6">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                do eiusmod tempor incididunt ut labore et dolore magna aliqua
+              </vue-magick-pen>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- End Main Content -->
+
+</div>
+
+
+<%= render partial: 'magick_pen/config', locals: { editable: @editable } %>
+<script>
+  Vue.prototype.$magickPenConfig = magickPenConfig
+  Vue.component('VueCodeHighlight',vueCodeHighlight.component )
+  var app = new Vue({
+    el: '#page-content',
+  })
+
+</script>
