--- a/app/views/top/index2.html.erb
+++ b/app/views/top/index2.html.erb
@@ -1,6 +1,127 @@
 
 <div id="page-content">
+  <div class="wrapper">
+    <div class="page-header page-header-small">
+      <div class="page-header-image" data-parallax="true" style="background-image: url(https://picsum.photos/id/946/1920/1080);">
+      </div>
+      <div class="content-center">
+        <div class="container">
+          <h1 class="title">Magick Pen</h1>
+          <div class="text-center">
+            Ruby on Rails + Vue
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="section section-about">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-8 ml-auto mr-auto text-center">
+            <h2 class="title">About Magic Pen</h2>
+            <h5 class="description">
+              <vue-magick-pen pen-key="snippet-1">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris pellentesque malesuada convallis. Quisque condimentum ac odio ut congue. Integer ultrices a erat sed hendrerit. Suspendisse dignissim nec erat at ornare.
+                Nunc nec ultricies nulla. Etiam sodales justo sed dolor tincidunt, vitae tristique nisi pharetra. Nulla sodales nisl sed leo rhoncus, sed pretium dui lobortis. Nulla faucibus leo nec egestas porta.
+                Donec convallis libero turpis, sed sodales tellus vulputate luctus..
+              </vue-magick-pen>
+            </h5>
+            <% unless @editable %>
+              <a href="?editable=true" class="btn-primary btn btn-lg"><i class="fas fa-pen"></i> Edit this page</a>
+            <%-  end %>
+          </div>
 
+        </div>
+        <div class="separator separator-primary"></div>
+        <div class="section-story-overview">
+          <div class="row">
+            <div class="col-md-6">
+              <div class="image-container image-left" style="background-image: url(https://picsum.photos/720/480)">
+                <p class="blockquote blockquote-primary">
+                  <vue-magick-pen pen-key="snippet-2">
+                  "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris pellentesque malesuada convallis.
+                  Quisque condimentum ac odio ut congue. Integer ultrices a erat sed hendrerit. "
+                  </vue-magick-pen>
+                  <br>
+                  <br>
+                  <small>-Magic Pen</small>
+                </p>
+              </div>
+              <div class="image-container" style="background-image: url(https://picsum.photos/720/481)"></div>
+            </div>
+            <div class="col-md-5">
+              <div class="image-container image-right" style="background-image: url(https://picsum.photos/720/482)"></div>
+              <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit.  </h3>
+              <p>
+                <vue-magick-pen pen-key="snippet-3">
+                Quisque condimentum ac odio ut congue. Integer ultrices a erat sed hendrerit. Suspendisse dignissim nec erat at ornare. Nunc nec ultricies nulla. Etiam sodales justo sed dolor tincidunt,
+                vitae tristique nisi pharetra. Nulla sodales nisl sed leo rhoncus, sed pretium dui lobortis.
+                </vue-magick-pen>
+              </p>
+              <p>
+                <vue-magick-pen pen-key="snippet-4">
+                Maecenas consectetur lacus eu porta euismod. Pellentesque scelerisque erat risus, a feugiat nibh maximus dictum. Sed massa felis, efficitur lobortis nulla cursus, egestas efficitur lacus.
+                Sed faucibus rhoncus rhoncus. Vivamus euismod velit arcu, nec iaculis ante scelerisque vitae. In pharetra est et elit auctor, imperdiet iaculis nisi aliquam.
+                </vue-magick-pen>
+              </p>
+              <p>
+                <vue-magick-pen pen-key="snippet-5">
+                Pellentesque ultrices a libero vitae vestibulum. Nam hendrerit malesuada mauris eu euismod. Suspendisse lacinia mi rhoncus convallis finibus. Curabitur finibus est arcu. Nullam vel sollicitudin enim.
+                Proin convallis vel elit at volutpat. Vestibulum vitae scelerisque justo, et molestie ipsum.
+                </vue-magick-pen>
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="section section-team text-center">
+      <div class="container">
+        <h2 class="title">Here is our team</h2>
+        <div class="team">
+          <div class="row">
+            <div class="col-md-4">
+              <div class="team-player">
+                <vue-magick-pen pen-key="member-1">
+                <img src="https://picsum.photos/72/72" alt="Thumbnail Image" class="rounded-circle img-fluid img-raised"/>
+                <h4 class="title">Tao Yamada</h4>
+                <p class="category text-primary">Model</p>
+                <p class="description">Duis posuere odio est, vitae imperdiet est eleifend at. Donec auctor tortor non dui eleifend sodales. Integer euismod, justo nec commodo porttitor, turpis elit vehicula lacus, non condimentum augue justo at urna. </p>
+                </vue-magick-pen>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="team-player">
+                <vue-magick-pen pen-key="member-2">
+                <img src="https://picsum.photos/73/73" alt="Thumbnail Image" class="rounded-circle img-fluid img-raised"/>
+                <h4 class="title">Hanako Matsui</h4>
+                <p class="category text-primary">Designer</p>
+                <p class="description">Suspendisse potenti. Morbi tortor leo, sagittis quis diam nec, lacinia malesuada tellus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed sit amet erat eu nulla tempus sollicitudin in sed est.</p>
+                </vue-magick-pen>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="team-player">
+                <vue-magick-pen pen-key="member-3">
+                <img src="https://picsum.photos/74/74" alt="Thumbnail Image" class="rounded-circle img-fluid img-raised"/>
+                <h4 class="title">Ichiro Mori</h4>
+                <p class="category text-primary">Fashion</p>
+                <p class="description">Ut viverra pulvinar tortor molestie lobortis. Praesent metus mi, tincidunt et neque porta, auctor varius metus. Aenean eget nisl nec urna accumsan feugiat.</p>
+                </vue-magick-pen>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <%= render partial: 'layouts/bootstrap/footer' %>
+  </div>
 </div>
-<%= render partial: 'magick_pen/config', locals: { editable: true } %>
-<%= javascript_pack_tag 'magick_pen' %>
+
+<%= render partial: 'magick_pen/config', locals: { editable: @editable } %>
+<script>
+  Vue.prototype.$magickPenConfig = magickPenConfig
+  Vue.component('VueCodeHighlight',vueCodeHighlight.component )
+  var app = new Vue({
+    el: '#page-content',
+  })
+</script>
