--- a/app/views/layouts/bulma/_footer.html.erb
+++ b/app/views/layouts/bulma/_footer.html.erb
@@ -1,11 +1,6 @@
 <footer class="footer">
     <p>
-      <vue-magick-pen pen-key="g-year">
-      <strong class="white">MagicK Pen</strong> by<a href="http://github.com/kazuomatz">Kazuomatz</a> 2021.
-      The source code is licensed
-      <a href="http://opensource.org/licenses/mit-license.php">MIT</a>. The website content is licensed
-      <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY NC SA 4.0</a>.
-      </vue-magick-pen>
+      <strong class="white">Magick Pen</strong>   by  <a href="http://github.com/kazuomatz">Kazuomatz</a> 2021.
     </p>
 </footer>
 <!-- End Footer -->
