--- a/app/views/layouts/bootstrap/_header.erb
+++ b/app/views/layouts/bootstrap/_header.erb
@@ -8,7 +8,7 @@
       </a>
     </div>
     <div class="navbar-translate">
-      <a class="navbar-brand" href="#" rel="tooltip" title="" data-placement="bottom" target="_blank">
+      <a class="navbar-brand" href="/" rel="tooltip" title="" data-placement="bottom">
         Magick Pen
       </a>
       <button class="navbar-toggler navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
