--- a/app/views/layouts/bulma/_header.html
+++ b/app/views/layouts/bulma/_header.html
@@ -57,7 +57,7 @@
                     <div class="column is-12 hero-menu-desktop has-text-centered">
                         <ul>
                             <li class="is-active">
-                                <a href="#home">Home</a>
+                                <a href="/">Top</a>
                             </li>
                             <li>
                                 <a href="#about-me">About</a>
