--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -1,275 +1,55 @@
-<div id="page-content">
+<h1>Magick Pen デモ</h1>
 
-  <div class="main-content">
-    <!-- Begin About Me Section -->
-    <div class="section-light about-me" id="about-me">
-      <div class="container">
-        <div class="column is-12 about-me">
-          <h1 class="title has-text-centered section-title">About Magick Pen</h1>
-        </div>
-        <div class="columns is-multiline">
-          <div
-            class="column is-6 has-vertically-aligned-content"
-            data-aos="fade-right">
-            <p class="is-larger">
-              <strong>
-                <vue-magick-pen pen-key="about">
-                Magick Penは、Ruby on Railsで制作されたWebサイト内のページの任意の箇所をダイレクトに編集して更新することを可能にするコンポーネントフレームワークです。
-                </vue-magick-pen>
-              </strong>
-            </p>
-            <br />
-            <p>
-              編集権限を持ったユーザーがサイトにアクセスした場合のみ編集を可能にすることができます。
-            </p>
-            <%- if ! @editable %>
-              <div class="mt-4"><a class="button is-primary" href="?editable=true"><i class="fa fa-edit"></i>&nbsp;編集する</a></div>
-            <% else %>
-              <div class="mt-4">
-                <i class="fa fa-edit fa-2x" style="color: orangered"></i> の部分にマウスオーバーすると編集ができます。
-              </div>
-            <%- end %>
-          </div>
-          <div class="column is-6 right-image " data-aos="fade-left">
-            <img
-              class="is-rounded"
-              src="https://picsum.photos/id/7/600/375"
-              alt=""
-              />
-          </div>
-        </div>
-      </div>
-    </div>
+<div id="magick-pen">
 
-    <div class="section-dark">
-      <div class="container">
-        <div
-          class="columns is-multiline"
-          data-aos="fade-in"
-          data-aos-easing="linear"
-        >
-          <div class="column is-12 about-me">
-            <h1 class="title has-text-centered section-title">
-              編集可能にしたい箇所をタグで囲むだけ
-            </h1>
-          </div>
-        </div>
-      </div>
-      <div class="container">
-        <div class="column is-12">
-          <vue-code-highlight language="markup">
-              <pre>
-<%- code = <<'EOS'
+  <section>
+    <p>
+      Magick Penを使うとRailsのerbテンプレートの任意の箇所を &lt;vue-magick-pen> &lt;/vue-magick-pen> タグで囲むだけで、Webページからダイレクトに編集することができます。<br/>
+      また、更新履歴も管理されるので、簡単に元に戻すこともできます。
+    </p>
+  </section>
 
-<div id="page-content">
-  <p class="is-larger">
-    <strong>
-      <vue-magick-pen pen-key="snippet-1">
-        Magick Penは、Ruby on Railsで制作されたWebサイト内のページの任意の箇所をダイレクトに編集して
-        更新することを可能にするコンポーネントフレームワークです。
-      </vue-magick-pen>
-    <strong>
-  </p>
-  :
-  :
-</div>
-
-  <!--
-     Magick Penの初期化スクリプトを読み込み
-     editableにtrueを与えると編集可能になります。
-  --->
-  <%= render partial: 'magick_pen/config', locals: { editable: @editable } % >
-<script>
-
-    <!-- magick-penの設定をVue.prototypeに注入し、カスタムタグを使用できるようにします。 --->
-    Vue.prototype.$magickPenConfig = magickPenConfig
-    Vue.component('VueCodeHighlight',vueCodeHighlight.component )
-
-    <!-- ページ内のelで指定された要素にVueを適用します --->
-    var app = new Vue({
-      el: '#page-content',
-    })
-</script>
-EOS
-%><%=  code %></pre>
-          </vue-code-highlight>
-          <p class="mt-3"> Railsのerbファイルの編集可能にしたい箇所を pen-key属性（ページ内のユニークなキー）をつけて、vue-magick-pen タグで囲むだけで編集可能になります。
-          pen-key は、controller / action 内でユニークなものととして扱われます。<br/>
-            ヘッダー、フッター、サイドバーなど サイトで共通な箇所、controller / action をまたぐ場合は、プレフィックス"g-" をpen-keyに付与すると(例：g-hoge)、サイト内でユニークなものとして扱われます。
-          </p>
-          <p class="mt-3 mb-3">
-            vue-magick-pen のタグで囲む部分は、プレインテキストでもHTMLでもOKです。HTMLの場合は、HTMLを編集することで更新ができます。
-          </p>
-
-          <vue-code-highlight language="css">
-              <pre>
-<%- code = <<'EOS'
-/*
-application.css
-
- *= require "vue-magick-pen/dist/vue-magick-pen"
-
-*/
-EOS
-%>
-<%= code %></pre></vue-code-highlight>
-
-
-          <vue-code-highlight language="css">
-              <pre>
-<%- code = <<'EOS'
-/*
-application.js
-
-//= require vue/dist/vue
-//= require vue-magick-pen/dist/vue-magick-pen.umd
-
-*/
-EOS
-%>
-<%= code %></pre></vue-code-highlight>
-
-
-
-        </div>
-      </div>
-    </div>
-
-    <div class="section-light about-me" id="about-me">
-      <div class="container">
-        <div class="column is-12 about-me">
-          <h1 class="title has-text-centered section-title">変更履歴を管理</h1>
-        </div>
-        <div class="columns is-multiline">
-          <%= image_tag "history.jpg" %>
-        </div>
-        <p class="mt-3">変更された内容をヒストリーとして保存します。修正を元に戻したい場合にも安心です。</p>
-      </div>
-    </div>
-
-    <!-- Begin Services Content -->
-
-    <div class="section-color services" id="services">
-      <div class="container">
-        <div class="columns is-multiline">
-          <div
-            class="column is-12 about-me"
-            data-aos="fade-in"
-            data-aos-easing="linear"
-          >
-            <h1 class="title has-text-centered section-title">Feature</h1>
-
-            <h2 class="subtitle">
-              <vue-magick-pen pen-key="service-title">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua
-              </vue-magick-pen>
-
-            </h2>
-            <br />
-          </div>
-          <div class="columns is-12">
-            <div
-              class="column is-4 has-text-centered"
-              data-aos="fade-in"
-              data-aos-easing="linear"
-            >
-              <i class="fas fa-meteor fa-3x"></i>
-              <hr />
-              <h2>
-                <vue-magick-pen pen-key="service-1">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                do eiusmod tempor incididunt ut labore et dolore magna aliqua
-                </vue-magick-pen>
-              </h2>
-            </div>
-            <div
-              class="column is-4 has-text-centered"
-              data-aos="fade-in"
-              data-aos-easing="linear"
-            >
-              <i class="fas fa-paint-brush fa-3x"></i>
-              <hr />
-              <h2>
-                <vue-magick-pen pen-key="service-2">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                  do eiusmod tempor incididunt ut labore et dolore magna aliqua
-                </vue-magick-pen>
-              </h2>
-            </div>
-            <div
-              class="column is-4 has-text-centered"
-              data-aos="fade-in"
-              data-aos-easing="linear"
-            >
-              <i class="fas fa-rocket fa-3x"></i>
-              <hr />
-              <h2>
-                <vue-magick-pen pen-key="service-3">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                  do eiusmod tempor incididunt ut labore et dolore magna aliqua
-                </vue-magick-pen>
-              </h2>
-            </div>
-          </div>
-          <hr />
-          <div class="columns is-12">
-            <div
-              class="column is-4 has-text-centered"
-              data-aos="fade-in"
-              data-aos-easing="linear"
-            >
-              <i class="fas fa-upload fa-3x"></i>
-              <hr />
-              <vue-magick-pen pen-key="service-4">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                do eiusmod tempor incididunt ut labore et dolore magna aliqua
-              </vue-magick-pen>
-            </div>
-            <div
-              class="column is-4 has-text-centered"
-              data-aos="fade-in"
-              data-aos-easing="linear"
-            >
-              <vue-magick-pen pen-key="icon-5">
-                <i class="fas fa-bus fa-3x"></i>
-              </vue-magick-pen>
-              <hr />
-              <h2>
-                <vue-magick-pen pen-key="service-5">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                  do eiusmod tempor incididunt ut labore et dolore magna aliqua
-                </vue-magick-pen>
-              </h2>
-            </div>
-            <div
-              class="column is-4 has-text-centered"
-              data-aos="fade-in"
-              data-aos-easing="linear"
-            >
-              <vue-magick-pen pen-key="icon-6">
-              <i class="fas fa-code fa-3x"></i>
-              </vue-magick-pen>
-              <hr />
-              <vue-magick-pen pen-key="service-6">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                do eiusmod tempor incididunt ut labore et dolore magna aliqua
-              </vue-magick-pen>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
+  <div class="paragraph">
+    <p>
+    <vue-magick-pen pen-key="snippet-1">
+    親譲りの無鉄砲で小供の時から損ばかりしている。小学校に居る時分学校の二階から飛び降りて一週間ほど腰を抜かした事がある。なぜそんな無闇をしたと聞く人があるかも知れぬ。
+    別段深い理由でもない。新築の二階から首を出していたら、同級生の一人が冗談に、いくら威張っても、そこから飛び降りる事は出来まい。弱虫やーい。と囃したからである。
+    小使に負ぶさって帰って来た時、おやじが大きな眼をして二階ぐらいから飛び降りて腰を抜かす奴があるかと云ったから、この次は抜かさずに飛んで見せますと答えた。（青空文庫より）
+    </vue-magick-pen>
+    </p>
   </div>
-  <!-- End Main Content -->
+
+
+  <div class="paragraph">
+    <p>
+    <vue-magick-pen pen-key="snippet-2">
+      町はずれは表情のかっかたばこがいへ町がしかっこうたた。またうとうと楽たたという音楽たござい。<br/>
+      上手ただのではないだってこどものいい気屋のときをはぱたっと俄たうて、みんなまで東が落ちれもんないた。<br/>
+      し過ぎみんなは畑をわるくたてこんどの猫のセロ屋を済ん第一枝らの挨拶へ曲げてだしまいじ。<br/>
+      ゴーシュはいつか黙れてやっませ。<br/>
+      楽器は三ぶっつけ工合のようがやめていまし。あとしか糸手とそれで弾きとしまっまし。意気地はゴーシュにしばらくとおろして気と手のようをなんがゴーシュへ怒ってもう赤に云っといろな。こつこつそんなに一つで戸棚をするたまし。<br/>
+      みんなすこしにトマトがおどかしてかっこうをひかるたた。間をとりましん。
+      </vue-magick-pen>
+    </p>
+  </div>
+
+  <section>
+    <p>
+        綺麗にデザインされたWebページの中にもMagicK Penは溶け込みます。
+    </p>
+      <ul>
+        <li>
+          <a href="/bulma"> Bulma でデザインしたページの例</a>
+        </li>
+        <li>
+          <a href="/bootstrap"> Bootstrapでデザインしたページの例</a>
+        </li>
+      </ul>
+    <p>
+      それぞれのページを開いたら、「編集モード」を書かれたボタンをクリックして下さい。
+    </p>
+  </section>
+
 </div>
 
-
-<%= render partial: 'magick_pen/config', locals: { editable: @editable } %>
-<script>
-  Vue.prototype.$magickPenConfig = magickPenConfig
-  Vue.component('VueCodeHighlight',vueCodeHighlight.component )
-  var app = new Vue({
-    el: '#page-content',
-  })
-</script>
+<%= render partial: 'magick_pen/load', locals: { editable: true } %>
