--- a/app/views/top/index_bootstrap.html.erb
+++ b/app/views/top/index_bootstrap.html.erb
@@ -17,18 +17,18 @@
       <div class="container">
         <div class="row">
           <div class="col-md-8 ml-auto mr-auto text-center">
-            <h2 class="title">About Magic Pen</h2>
+            <h2 class="title">About Magick Pen</h2>
             <h5 class="description">
-              <vue-magick-pen pen-key="snippet-1">
+              <vue-magick-pen pen-key="snippet-10">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris pellentesque malesuada convallis. Quisque condimentum ac odio ut congue. Integer ultrices a erat sed hendrerit. Suspendisse dignissim nec erat at ornare.
                 Nunc nec ultricies nulla. Etiam sodales justo sed dolor tincidunt, vitae tristique nisi pharetra. Nulla sodales nisl sed leo rhoncus, sed pretium dui lobortis. Nulla faucibus leo nec egestas porta.
                 Donec convallis libero turpis, sed sodales tellus vulputate luctus..
               </vue-magick-pen>
             </h5>
             <% if @editable %>
-              <a href="./bootstrap" class="btn-primary btn btn-lg"><i class="fas fa-times"></i> 編集モード終了</a>
+              <!--                            <a href="./bootstrap" class="btn-primary btn btn-lg"><i class="fas fa-times"></i> 編集モード終了</a>-->
             <%- else %>
-              <a href="./bootstrap?editable=true" class="btn-primary btn btn-lg"><i class="fas fa-pen"></i> 編集モード</a>
+<!--              <a href="./bootstrap?editable=true" class="btn-primary btn btn-lg"><i class="fas fa-pen"></i> 編集モード</a> -->
             <%-  end %>
           </div>
 
