add sample page

--- a/app/views/top/index_bootstrap.html.erb
+++ b/app/views/top/index_bootstrap.html.erb
@@ -26,9 +26,9 @@
               </vue-magick-pen>
             </h5>
             <% if @editable %>
-              <!--                            <a href="./bootstrap" class="btn-primary btn btn-lg"><i class="fas fa-times"></i> 編集モード終了</a>-->
+               <a href="./bootstrap" class="btn-primary btn btn-lg"><i class="fas fa-times"></i> 編集モード終了</a>-
             <%- else %>
-<!--              <a href="./bootstrap?editable=true" class="btn-primary btn btn-lg"><i class="fas fa-pen"></i> 編集モード</a> -->
+              <a href="./bootstrap?editable=true" class="btn-primary btn btn-lg"><i class="fas fa-pen"></i> 編集モード</a>
             <%-  end %>
           </div>
 
